Added images of burrows delta and author probability to stylometry report

--- a/flaskr/templates/reports/styloReport.html
+++ b/flaskr/templates/reports/styloReport.html
@@ -31,11 +31,13 @@ body {font-family: "Lato", sans-serif;overflow-y: scroll;}
 <div class="container" style="border: 3px solid black;margin: 5px 50px 10px 50px;">
   <div>
     <span><p>Burrow's Delta Score for Source Document</p></span>
-    <img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg">
+    <!-- <img src="../../static/images/ReportImages/delta_score.png" alt="burrows_delta.png" style="width: 500px;height: 400px;"> -->
+    <a href="../../static/images/ReportImages/delta_score.png">Click Here</a>
   </div>
   <div>
     <span><p>Author Probability</p></span>
-    <img src="https://static.pexels.com/photos/66898/elephant-cub-tsavo-kenya-66898.jpeg">
+    <!-- <img src="../../static/images/ReportImages/author_probability.png" alt="author_probability.png"  style="width: 500px;height: 400px;"> -->
+    <a href="../../static/images/ReportImages/author_probability.png">Click Here</a>
   </div>
   <div>
     <span><p>Calibration Curve</p></span>
