--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -16,6 +16,13 @@
 <!-- __ -->
 
 <link rel="stylesheet" href="/static/home.css">
+<link rel="stylesheet" href="../../static/tooltip.css">
+
+<!-- Delete if Broken -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
 <style>
@@ -36,10 +43,11 @@ body {font-family: "Lato", sans-serif}
 <h1> Quick Text Report</h1>
 <br>
 <br>
-<div style="display: flex;justify-content: center;align-items: center;">
-  <span style="font-weight: 700;font-size:1.5em;margin-right:5em">Percentage similarity Jaccard: <p style="color: {{colorJac}};">{{ similarityJac }}%</p></span>
-  <span style="font-weight: 700;font-size:1.5em;loat:right">Percentage similarity Cosine: <p style="color: {{colorCos}};">{{ similarityCos }}%</p></span>
+<div class = "container" style="display: flex;justify-content: center;align-items: center;"> 
+  <span style="font-weight: 700;font-size:1.5em;margin-right:5em; border: none;" data-toggle="tooltip" title="{{JaccardTooltip}}"> Percentage similarity Jaccard: <p style="color: {{colorJac}};">{{ similarityJac }}%</p> </span>
+  <span style="font-weight: 700;font-size:1.5em;float:right; border: none;" data-toggle="tooltip" title="{{CosineTooltip}}">Percentage similarity Cosine: <p style="color: {{colorCos}};">{{ similarityCos }}%</p> </span>
 </div>
+
 <div class="w3-container">
   <table class="w3-table-all">
       <tr>
@@ -108,7 +116,11 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 
-  
+<script>
+  $(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();   
+  });
+</script>
 
 
 <!-- End Page Content -->
