--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -17,17 +17,24 @@
 
 <link rel="stylesheet" href="/static/home.css">
 <link rel="stylesheet" href="../../static/tooltip.css">
-
-<!-- Delete if Broken -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
+.container {
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+  }
+
+  img {
+    width: 500px;
+    height: 250px;
+    margin: 10px;
+  }
 </style>
 
 {% endblock %}
@@ -99,23 +106,23 @@ body {font-family: "Lato", sans-serif}
 
 <br>
 <br>
-
-
-<div style="display: flex;justify-content: center;align-items: center; border: 3px solid black; margin: 5px 200px 5px 200px; background-color: white" >
-  <div style="margin-left: 90px">
-    <h2 style="float: right;margin-right: 14em; font-weight: 700"> Suspect WordCloud </h1>
-    <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="display: block;margin-left: 210px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px" >
+<div class="container" style="border: 3px solid black;margin: 5px 200px 5px 180px; background-color: white;padding: 2em 2em 2em 2em;">
+  <div>
+    <h2 style="float: right;margin-right: 5em;font-weight: 700"> Suspect WordCloud </h2>
+    <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png">
   </div>
   <div>
-    <h2  style="float: left;margin-left: 3em; font-weight: 700"> Comparison WordCloud </h1>
-    <img src="../../static/images/WordCloud/wordcloud2.png" alt="WordCloud2.png" style="display: block;margin-left: auto;margin-right: 300px;width: 500px;height: 250px;margin-bottom: 25px">
+    <h2  style="float: left;margin-left: 3em;font-weight: 700"> Comparison WordCloud </h2>
+    <img src="../../static/images/WordCloud/wordcloud2.png" alt="WordCloud2.png">
   </div>
-  <br>
 </div>
 
 <br>
 <br>
 
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip();   
