Added document wordcounts to quickText

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -79,16 +79,21 @@ body {font-family: "Lato", sans-serif}
       </tr>
     </table>
 </div>
+<br>
 
-<!-- Test Doc -->
 <div>
   <div>
     <h2 style=" float: left;margin-left: 8em"> Suspected Document  </h1>
   </div>
-  
   <div>
     <h2 style=" float: right; margin-right: 8em"> Comparison Document  </h1>
   </div>
+</div>
+<br>
+<br>
+<div style="display:flex;justify-content: center;align-items: center;">
+    <p style="margin-right: 13em"> Wordcount: &nbsp &nbsp {{file1Length}} <p>
+    <p style="margin-left: 30em;"> Wordcount: &nbsp &nbsp {{file2Length}} </p>
 </div>
 
 
