--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -133,6 +133,20 @@ body {font-family: "Lato", sans-serif}
     $('[data-toggle="tooltip"]').tooltip();   
   });
 </script>
+<br>
+<h2  style="float: left;margin-left: 27em;font-weight: 700"> Words Used Comparison </h2>
+<br>
+<div class="container-fluid">
+  
+  <div class="col-6" style="border: 3px solid black; margin: 5px 5px 5px 5px;float: left;background-color: white">
+      
+  </div>
+
+  <!-- Report -->
+  <div class="col-6" style="border: 3px solid black; margin: 5px 5px 5px 5px; float: right;background-color: white">
+      
+  </div>
+</div>
 
 
 <!-- End Page Content -->
