Stylometry now receives StdNumbers (Changed Label)

--- a/flaskr/templates/stylometry/stylo.html
+++ b/flaskr/templates/stylometry/stylo.html
@@ -32,8 +32,8 @@ body {font-family: "Lato", sans-serif}
     <form method="post" action="/stylometry" enctype="multipart/form-data">
       <dl>
         <p>
-          <p>Student Name and Surname</p>
-          <input type="text" name="studentname" id="studentname" required autocomplete="off" class="input" style="margin-right: 210px;">
+          <p>Enter Student Number</p>
+          <input type="text" name="studentname" id="studentname" required autocomplete="off" class="input" style="margin-right: 190px;">
           <p>Upload Source Document</p>
           <input type="file" name="file1" required autocomplete="off" class="input">
           <p>Upload Additional Document to Corpus (Optional) </p>
