Removed Upload button

--- a/flaskr/templates/baseReport.html
+++ b/flaskr/templates/baseReport.html
@@ -20,7 +20,7 @@
     <a href="/reports" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Reports</a>
     <!--send_file(pdfDownloadPath, as_attachment=True)-->
     <a href="{{ url_for('download', filename="PlagiarismReport.pdf") }}"> <button class="button buttonstyle"> <span>  Save  </span>  </button> </a>
-    <button class="button buttonstyle"> <span> Upload </span> </button>
+    <!-- <button class="button buttonstyle"> <span> Upload </span> </button> -->
   </div>
 </div>
 
