Extensive Text Base
Hanno se eerste commit!

--- a/flaskr/templates/text/ExtensiveText.html
+++ b/flaskr/templates/text/ExtensiveText.html
@@ -48,16 +48,43 @@ body {font-family: "Lato", sans-serif;}
 
 <div class="form-center">
   <form method="post" action="/ExtensiveText" enctype="multipart/form-data">
-    <h1> <u> Hanno se ding </u> </h1>
+    <h1> <u> Create Student </u> </h1>
     <h2> Student Number: </h2> <input type="text" id="stdNum" name="stdNum" placeholder="12345678"> 
     <br>
-    <h2> Student Name: </h2> <input type="text" id="stdName" name="stdName" placeholder="Them Doe">
-
+    
+    <p>Upload Comparison Document</p>
+    <input type="file" name="ExtensiveStudent" autocomplete="off" required class="input">
+    <br>
+    <br>
+    <input type="radio" name="ExtensiveText" value="CreateStudent" checked> Create Student<br>
+    <input type="radio" name="ExtensiveText" value="UpdateStudent"> Update Student<br>
+    <input type="radio" name="ExtensiveText" value="CompareCorpus"> Compare Corpus <br>
+    <br>
     <p>
       <input type="submit" value="Submit">
     </p>
+
   </form>
 </div>
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
 
 <!-- End Page Content -->
 
