--- a/flaskr/templates/baseReport.html
+++ b/flaskr/templates/baseReport.html
@@ -19,13 +19,17 @@
     <a href="/home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="/reports" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Reports</a>
     <!--send_file(pdfDownloadPath, as_attachment=True)-->
-    <a href="{{ url_for('download', filename="PlagiarismReport.pdf") }}"> <button class="button buttonstyle"> <span>  Save  </span>  </button> </a>
+    <!-- <a href=""> <button class="button buttonstyle"> <span>  Save  </span>  </button> </a> -->
     <!-- <button class="button buttonstyle"> <span> Upload </span> </button> -->
+    {% if request.path == "/QuickText" %}
+      <a href="{{url_for('download', filename="PlagiarismReport.pdf")}}"> <button class="button buttonstyle"> <span>  Save  </span>  </button> </a>
+    {% elif request.path == "/stylometry" %}
+      <a href="{{url_for('download', filename="styloReport.pdf")}}"> <button class="button buttonstyle"> <span>  Save  </span>  </button> </a>
+    {% endif %}
   </div>
 </div>
 
 {% block main %}
-
 
 
 {% endblock %}
