--- a/flaskr/templates/reports/extensiveReport.html
+++ b/flaskr/templates/reports/extensiveReport.html
@@ -30,6 +30,8 @@ body {font-family: "Lato", sans-serif}
 <h1> Extensive Text Report</h1>
 <p> Choose a file to continue working on:</p>
 
+<p>{{theList}}</p>
+
 <!-- End Page Content -->
 
 {% endblock %}
