Added ExtensiveReport save button

--- a/flaskr/templates/baseReport.html
+++ b/flaskr/templates/baseReport.html
@@ -25,6 +25,9 @@
       <a href="{{url_for('download', filename="PlagiarismReport.pdf")}}"> <button class="button buttonstyle"> <span>  Save  </span>  </button> </a>
     {% elif request.path == "/stylometry" %}
       <a href="{{url_for('download', filename="styloReport.pdf")}}"> <button class="button buttonstyle"> <span>  Save  </span>  </button> </a>
+    {% elif request.path == "/ExtensiveText" %}
+      <a href="{{url_for('download', filename="ExtensiveReport.pdf")}}"> <button class="button buttonstyle"> <span>  Save  </span>  </button> </a>
+    
     {% endif %}
   </div>
 </div>
