Added descriptions of stylo results

--- a/flaskr/templates/reports/styloReport.html
+++ b/flaskr/templates/reports/styloReport.html
@@ -53,10 +53,19 @@ table, th, td {
   <div>
     <span><p>ROC (Receiver Operating Characteristic) Curve</p></span>
     <img src="../../static/images/ReportImages/operating_curve.png" alt="operating_curve.png">
+    <p>The Receiver Operator Characteristic (ROC) curve is a graphical plot that illustrates the </p>
+    <p>diagnostic ability of a binary classifier system as its discrimination threshold is varied.</p>
+    <p>Classifiers that give curves closer to the top-left corner indicate a better performance. </p>
+    <p>The closer the curve is to the 45 degree diagonal of the ROC space, the less accurate the test is.</p>
+    <p>An AUC score of 0.5 means that a classifier is performing badly, and a 1.0 score is a perfect score. </p>
+    <p>The AUC score is on the bottom right corner of the graph.</p>
   </div>
   <div>
     <span><p>PCA-Derived Coordinates</p></span>
     <img src="../../static/images/ReportImages/plot.png" alt="plot.png">
+    <p>The Principal Component Analysis (PCA) curve is a cluster of all the authors and their documents.</p>
+    <p>It is used to visualise the sylistic similarities between the documents in the corpus. </p>
+    <p>The closer the documents are to each other the more similar they are.</p>
   </div>
 </div>
 
