--- a/flaskr/templates/help/help.html
+++ b/flaskr/templates/help/help.html
@@ -29,13 +29,20 @@ body {font-family: "Lato", sans-serif}
 <br>
 <h1> This is the help page </h1>
 
-<button class="btn-floating btn-large waves-effect waves-light red" onclick="goLeft()"><i class="material-icons">chevron_left</i></button>		
+<!-- <button class="btn-floating btn-large waves-effect waves-light red" onclick="goLeft()"><i class="material-icons">chevron_left</i></button>		
 </div>
 <div class="bottom-right">
 <a class="btn-floating btn-large waves-effect waves-light red" onclick="goRight()"><i class="material-icons">chevron_right</i></a>		
 </div>
 <div id="pdfwindow"></div>
-<div id="contents" class="hide">{{contents}}</div>
+<div id="contents" class="hide">{{contents}}</div> -->
+
+<style>
+    .container{padding: 30px}
+</style>
+<div class="container">
+    <embed src="./SimiLabs_User_Manual.pdf" type="application/pdf" width="90%" height="700px">
+</div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="../../static/js/materialize.js"></script>
