Fixed footers on all pages

--- a/flaskr/templates/baseNavHelp.html
+++ b/flaskr/templates/baseNavHelp.html
@@ -47,16 +47,12 @@
 {% endblock %}
 
 <!-- Footer -->
-<!-- <div id="footer">
-    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-      <p class="w3-medium">Powered by &nbsp<a href="https://github.com/ISE-Project-2022/SimiLabs_2022" target="_blank"> SimiLabs 2022</a></p>
-    </footer>
-</div> -->
+<!-- <div id="footer"> -->
 <div>
-  <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge"  style= "background: linear-gradient(150deg, #4d004d 30%, rgb(252, 30, 233) 70%);">
-    <p class="w3-medium" style="color: #ffffff;">Powered by &nbsp<a href="https://github.com/ISE-Project-2022/SimiLabs_2022" target="_blank" style="color: #66ffff"> SimiLabs 2022</a></p>
-  </footer>
+    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge"  style= "background: linear-gradient(89deg, purple 20%, rgb(252, 30, 233) 100%);">
+      <p class="w3-medium" style="color: #ffffcc;">Powered by &nbsp<a href="https://github.com/ISE-Project-2022/SimiLabs_2022" target="_blank"> SimiLabs 2022</a></p>
+    </footer>
 </div>
   
-  <script src="../../static/js/footer.js"></script>
+  <script src="../static/js/footer.js"></script>
   
