--- a/flaskr/templates/home/home.html
+++ b/flaskr/templates/home/home.html
@@ -31,6 +31,9 @@ body {font-family: "Lato", sans-serif}
 <h1> Shortcut</h1>
 <p> Choose a file to continue working on:</p>
 
+<div style="margin-bottom: 55vh;"></div>
+
 <!-- End Page Content -->
+
 
 {% endblock %}
