--- a/flaskr/templates/reports/report.html
+++ b/flaskr/templates/reports/report.html
@@ -28,6 +28,8 @@ body {font-family: "Lato", sans-serif}
 <h1> Reports</h1>
 <p> Choose a file to continue working on:</p>
 
+<div style="margin-bottom: 55vh;"></div>
+
 <!-- End Page Content -->
 
 {% endblock %}
