--- a/flaskr/templates/text/ExtensiveText.html
+++ b/flaskr/templates/text/ExtensiveText.html
@@ -73,21 +73,7 @@ body {font-family: "Lato", sans-serif;}
   </form>
 </div>
 
-
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<div style="margin-bottom: 5em;"></div>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="../../static/js/disablecheckbox.js"></script>
