--- a/flaskr/templates/help/help.html
+++ b/flaskr/templates/help/help.html
@@ -1,4 +1,4 @@
-{% extends 'baseNav.html' %}
+{% extends 'baseNavHelp.html' %}
 
 {% block header %}
 
@@ -41,8 +41,11 @@ body {font-family: "Lato", sans-serif}
     .container{padding: 30px}
 </style>
 <div class="container">
-    <embed src="./SimiLabs_User_Manual.pdf" type="application/pdf" width="100%" height="700px">
+    <embed src="../../static/pdf/SimiLabs_User_Manual.pdf" type="application/pdf" width="100%" height="700px">
 </div>
+
+<!-- <div  style="margin-bottom: 10em;"></div> -->
+
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="../../static/js/materialize.js"></script>
