--- a/flaskr/templates/text/QuickText.html
+++ b/flaskr/templates/text/QuickText.html
@@ -57,6 +57,8 @@ body{font-family: "Lato", sans-serif; height: 100%; margin: 0;}
 </div>
 </form>
 
+<div style="margin-bottom: 5em;"></div>
+
 
 <!-- End Page Content -->
 
