Completed Stylo Additional Doc Upload

--- a/flaskr/templates/reports/styloReport.html
+++ b/flaskr/templates/reports/styloReport.html
@@ -65,7 +65,7 @@ table, th, td {
     <img src="../../static/images/ReportImages/plot.png" alt="plot.png">
     <p>The Principal Component Analysis (PCA) curve is a cluster of all the authors and their documents.</p>
     <p>It is used to visualise the sylistic similarities between the documents in the corpus. </p>
-    <p>The closer the documents are to each other the more similar they are.</p>
+    <p>The closer the documents are to each other the more likely they are written by the same author.</p>
   </div>
 </div>
 
