Home Page Changes

--- a/flaskr/templates/exceptions/errors.html
+++ b/flaskr/templates/exceptions/errors.html
@@ -3,15 +3,24 @@
 {% block title %}Something went wrong{% endblock %}
 
 {% block main %}
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>Something went wrong: {{ error }}</h1>
+            <h1 style="text-align: center;"> Something went wrong:</h1>
+            <h3 style="text-align: center;"> {{ error }}</h3>
             <hr>
-            <a href="/">Home</a>
         </div>
     </div>
 </div>
+
+<div style="margin-bottom: 35vh;"></div>
 
 {% endblock %}
