Added Extensive Result Description
Nog n Hanno Commit

--- a/flaskr/templates/text/ExtensiveText.html
+++ b/flaskr/templates/text/ExtensiveText.html
@@ -39,10 +39,10 @@ body {font-family: "Lato", sans-serif;}
 
 <div class="form-center">
   <form method="post" action="/ExtensiveText" enctype="multipart/form-data">
-    <h1> <u> Create Student </u> </h1>
+    <h1> <u> Manage Student Corpus </u> </h1>
     <h3> Student Number: </h3> <input type="text" id="stdNum" name="stdNum" placeholder="12345678" required> 
     <br>
-    <p>Upload Comparison Document</p>
+    <p>Upload Document</p>
     <input type="file" name="ExtensiveStudent" autocomplete="off" required class="input">
     <br>
     <br>
