--- a/flaskr/templates/reports/extensiveReport.html
+++ b/flaskr/templates/reports/extensiveReport.html
@@ -38,6 +38,20 @@ body {font-family: "Lato", sans-serif}
     <!-- <p>{{theList}}</p> -->
 </div>
 
+<div style="justify-content: center;align-items: center;width: 80%;margin-left: 10em;border: 3px solid black;padding: 0em 2em 2em 2em;">
+    <h2 style="text-align: center;">
+        Description of results
+    </h2>
+    <p style="font-weight: 200 ">
+        The application provides an LSI score and TD-IDF Score for each document within the specified student corpus.<br>
+        Both LSI score and TD-IDF scores are used to determine the similarity between the documents. <br>
+        The LSI calculation is based on the Latent Semantic Indexing (LSI) algorithm and should be used for smaller size documents (Documents containing less than 3 pages).<br>
+        The TD-IDF calculation is based on the Term Frequency-Inverse Document Frequency (TD-IDF) algorithm and should be used for larger size documents (Documents containing more than 3 pages).<br>
+        The scores range from -1 to 1 where -1 indicates that the documents are completely different and 1 indicates that the documents are completely similar.<br>
+        The LSI calculation method focuses on the individual words in the corpus whereas TD-IDF focuses on sentences and words.<br>
+    </p>
+</div>
+
 <!-- End Page Content -->
 
 {% endblock %}
