--- a/flaskr/templates/help/help.html
+++ b/flaskr/templates/help/help.html
@@ -30,7 +30,7 @@ body {font-family: "Lato", sans-serif}
     .container{padding: 30px}
 </style>
 <div class="container" style="border: 2px solid black;background-color: rgb(197, 202, 200);">
-    <embed src="../../static/pdf/SimiLabs_User_Manual.pdf" type="application/pdf" width="100%" height="700px">
+    <embed src="../../static/pdf/SimiLabs_User_Manual_V1.1.pdf" type="application/pdf" width="100%" height="700px">
 </div>
 
 
@@ -40,7 +40,7 @@ body {font-family: "Lato", sans-serif}
     .container{padding: 30px}
 </style>
 <div class="container" style="border: 2px solid black;background-color: rgb(197, 202, 200);">
-    <embed src="../../static/pdf/SimiLabs_User_Manual.pdf" type="application/pdf" width="100%" height="700px">
+    <embed src="../../static/pdf/Developer_Manual_NightcoreMech_V1.1.pdf" type="application/pdf" width="100%" height="700px">
 </div>
 
 <div style="margin-bottom: 3em;"></div>
